--- a/src/app/components/timers/custom-timer-modal/custom-timer-modal.component.html
+++ b/src/app/components/timers/custom-timer-modal/custom-timer-modal.component.html
@@ -270,7 +270,7 @@
                       >
                         @for (hour of hourOptions; track hour) {
                           <option [value]="hour" [selected]="hour === (formData().dailyHour ?? 21)">
-                            {{ hour < 10 ? '0' + hour : hour }}:00
+                            {{ hour < 10 ? '0' + hour : hour }}
                           </option>
                         }
                       </select>
@@ -329,7 +329,7 @@
                             [value]="hour"
                             [selected]="hour === (formData().weeklyHour ?? 21)"
                           >
-                            {{ hour < 10 ? '0' + hour : hour }}:00
+                            {{ hour < 10 ? '0' + hour : hour }}
                           </option>
                         }
                       </select>
@@ -372,7 +372,7 @@
                         >
                           @for (hour of hourOptions; track hour) {
                             <option [value]="hour" [selected]="hour === slot.hour">
-                              {{ hour < 10 ? '0' + hour : hour }}:00
+                              {{ hour < 10 ? '0' + hour : hour }}
                             </option>
                           }
                         </select>
@@ -402,7 +402,7 @@
                     @if (dailyMultiSlots().length < limits.MAX_DAILY_MULTI_TIMES) {
                       <button
                         type="button"
-                        class="btn-secondary btn-sm"
+                        class="btn-secondary btn-sm add-time-slot-button"
                         (click)="addDailyMultiSlot()"
                       >
                         <i class="bi bi-plus-lg"></i> Add Time Slot
@@ -480,7 +480,7 @@
                             [value]="hour"
                             [selected]="hour === (formData().weeklyMultiHour ?? 20)"
                           >
-                            {{ hour < 10 ? '0' + hour : hour }}:00
+                            {{ hour < 10 ? '0' + hour : hour }}
                           </option>
                         }
                       </select>
@@ -533,7 +533,7 @@
                         >
                           @for (hour of hourOptions; track hour) {
                             <option [value]="hour" [selected]="hour === slot.hour">
-                              {{ hour < 10 ? '0' + hour : hour }}:00
+                              {{ hour < 10 ? '0' + hour : hour }}
                             </option>
                           }
                         </select>
@@ -562,7 +562,7 @@
                     @if (weeklyTimeSlots().length < limits.MAX_WEEKLY_TIMES) {
                       <button
                         type="button"
-                        class="btn-secondary btn-sm"
+                        class="btn-secondary btn-sm add-time-slot-button"
                         (click)="addWeeklyTimeSlot()"
                       >
                         <i class="bi bi-plus-lg"></i> Add Time Slot
@@ -604,7 +604,7 @@
                             [value]="hour"
                             [selected]="hour === (formData().weeklyRangeOpenHour ?? 0)"
                           >
-                            {{ hour < 10 ? '0' + hour : hour }}:00
+                            {{ hour < 10 ? '0' + hour : hour }}
                           </option>
                         }
                       </select>
@@ -655,7 +655,7 @@
                             [value]="hour"
                             [selected]="hour === (formData().weeklyRangeCloseHour ?? 23)"
                           >
-                            {{ hour < 10 ? '0' + hour : hour }}:00
+                            {{ hour < 10 ? '0' + hour : hour }}
                           </option>
                         }
                       </select>
